# IA_Pr1

./: CMakeLists.txt  README.md  out.txt
data/: Grafo  GrafoCorrec1Heur.txt  GrafoCorrec2.txt  GrafoCorrec2Heur.txt  GrafoCorrec3Heur.txt  GrafoCorrec4.txt  GrafoCorrec4Heur.txt  heuristica_O1F5
src/: Arbol.cpp  Arbol.h  BusquedaAEstrella.cpp  BusquedaAEstrella.h  Grafo.cpp  Grafo.h  NodoArbol.cpp  NodoArbol.h  main.cpp  main2.cpp
